Bug 1816160: Warn (and no-op) on setParameters with empty encodings if the compat mode is enabled. r=jib a=pascalc

Also add some wpt for this (invalid) case.

Differential Revision: https://phabricator.services.mozilla.com/D169505