dom/media/webrtc/jsapi/RTCRtpSender.cpp
@@ -616,15 +616,21 @@ already_AddRefed<Promise> RTCRtpSender::SetParameters(
   // This could conceivably happen if we are allowing the old setParameters
   // behavior.
   if (!paramsCopy.mEncodings.Length()) {
-    if (!mHaveFailedBecauseNoEncodings) {
-      mHaveFailedBecauseNoEncodings = true;
-      mozilla::glean::rtcrtpsender_setparameters::fail_no_encodings
-          .AddToNumerator(1);
-    }
+    nsCString error("Cannot set an empty encodings array");
+    if (!mAllowOldSetParameters) {
+      if (!mHaveFailedBecauseNoEncodings) {
+        mHaveFailedBecauseNoEncodings = true;
+        mozilla::glean::rtcrtpsender_setparameters::fail_no_encodings
+            .AddToNumerator(1);
+      }
 
-    p->MaybeRejectWithInvalidModificationError(
-        "Cannot set an empty encodings array");
-    return p.forget();
+      p->MaybeRejectWithInvalidModificationError(error);
+      return p.forget();
+    }
+    // TODO: Add some warning telemetry here
+    WarnAboutBadSetParameters(error);
+    // Just don't do this; it's stupid.
+    paramsCopy.mEncodings = oldParams->mEncodings;
   }
 
   // TODO: Verify remaining read-only parameters
